Add /accounts endpoint in swagger
